Bug 1604941 - Don't leave AudioContextOperation::Resume hanging. r=padenot

Differential Revision: https://phabricator.services.mozilla.com/D57696